modify link in html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCHTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="report_web_style.css">
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 </head>
