revise Project-2 url

--- a/Project-2/project2.html
+++ b/Project-2/project2.html
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 		<div class="change">
-			<a href="https://github.com/pchun2330"><div class="circle bs5"><p>BS5+JS version</p></div></a>
+			<a href="https://pchun2330.github.io/Project/Project-2-2/BS5_Forms.html"><div class="circle bs5"><p>BS5+JS version</p></div></a>
 		</div>
 	</div>
 </body>
