--- a/Project-3/project3.html
+++ b/Project-3/project3.html
@@ -15,23 +15,25 @@
 	<nav class="navbar navbar-expand-sm justify-content-center bg-dark navbar-dark">
 			
 		<ul class="navbar-nav">
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">首頁</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">電子信箱</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">新聞</a></li>
-			<li class="nav-item"><a class="nav-link " href="https://tw.yahoo.com/" target="_blank">股市</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">氣象</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">運動</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">Yahoo TV</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">APP下載</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">購物中心</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">超級商城</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">拍賣</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://tw.yahoo.com/" target="_blank">更多...</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >首頁</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html">電子信箱</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >新聞</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >股市</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >氣象</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >運動</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >Yahoo TV</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >APP下載</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html">購物中心</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >超級商城</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >拍賣</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html" >更多...</a></li>
 		</ul>
 	</nav>
 	<nav class="navbar navbar-expand-sm justify-content-center bg-light sticky-top">
 		<div class="mt-3 me-5">
-			<img src="https://s.yimg.com/rz/p/yahoo_news_zh-Hant-TW_h_p_newsv2.png">
+			<a href="https://pchun2330.github.io/Project/Project-3-1/project3-1.html">
+				<img src="https://s.yimg.com/rz/p/yahoo_news_zh-Hant-TW_h_p_newsv2.png">
+			</a>
 		</div>
 		<div>
 			<form class="d-flex">
